Trivial cleanup.
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1245307 13f79535-47bb-0310-9956-ffa450edef68